changed body global color

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,6 @@ a {
   font-family: "Roboto", sans-serif;
 }
 h3 {
-  color: var(--darker-text-color);
   font-size: 14px;
   font-weight: 700;
   line-height: 1.1;
@@ -91,13 +90,11 @@ h3 {
   line-height: 1.71;
 }
 h2 {
-  color: var(--darker-text-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
 }
 .worker-name {
-  color: var(--darker-text-color);
   font-weight: 500;
   line-height: 1.2;
 }
@@ -110,7 +107,7 @@ h2 {
 .filter-button {
   background-color: var(--buttons-and-background);
   color: var(--darker-text-color);
-  font-style: medium;
+  font-style: normal;
   line-height: 1.39;
   font-weight: 500;
   font-size: 16px;
@@ -125,7 +122,6 @@ h2 {
   list-style: none;
 }
 .list-item {
-  color: var(--darker-text-color);
   font-size: 18px;
   line-height: 1.71;
   font-weight: 700;
