--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,50 @@
   --darker-text-color: #212121;
   --black: #000000;
   --white: #ffffff;
+  --light-grey-border: #ececec;
   --transparent-white: rgba(255, 255, 255, 0.6);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+li,
+ul {
+  padding: 0;
+  margin: 0;
 }
 body {
   font-family: "Roboto", sans-serif;
   color: var(--darker-text-color);
 }
+.section {
+  padding: 94px 0;
+}
+.container {
+  margin: 0 auto;
+  width: 1200px;
+  outline: 1px dashed red;
+}
+.flex-nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 27px;
+  gap: 50px;
+  border-bottom: 1px solid var(--light-grey-border);
+}
+.flex-inner-nav {
+  display: flex;
+  align-items: center;
+  padding-right: 294px;
+}
 .nav-list {
   list-style: none;
+  display: flex;
+  gap: 45.95px;
 }
 .nav-list a {
   text-decoration: none;
@@ -32,6 +68,8 @@ body {
   line-height: 31px;
   letter-spacing: 0.03em;
   color: var(--interaction-color);
+  margin-left: 15px;
+  padding: 25.2px 93px 26.25px 0px;
 }
 .logo-black {
   color: var(--black);
@@ -63,6 +101,12 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.06em;
   font-style: normal;
+  display: block;
+  text-align: center;
+  width: 696px;
+  height: 120px;
+  padding-left: 251px;
+  margin-bottom: 30px;
 }
 .order-button {
   background-color: var(--interaction-color);
@@ -73,6 +117,17 @@ body {
   cursor: pointer;
   outline: none;
   border: none;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  margin-left: 499px;
+}
+.article-flex-container {
+  display: flex;
+  list-style: none;
+  padding-left: 15px;
+  padding-right: 15px;
+  gap: 30px;
 }
 .article-title {
   font-size: 14px;
@@ -89,6 +144,36 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
+  text-align: center;
+  vertical-align: top;
+}
+.negative-margin-top {
+  margin-top: -94px;
+}
+.images-flex-container {
+  display: flex;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 50px;
+  gap: 30px;
+}
+.grey-background {
+  background-color: var(--buttons-and-background);
+}
+.workers-list {
+  display: flex;
+
+  list-style: none;
+  padding-left: 15px;
+  padding-right: 15px;
+  gap: 30px;
+}
+.workers-list figure {
+  width: 270px;
+  height: 368px;
+  background: white;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 .worker-name {
   font-weight: 500;
